--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/Service">
   <head>
-    <link rel="preload" href="/assets/fonts/opensans-light-webfont.woff2" as="style" crossorigin>
-    <link rel="preload" href="/assets/fonts/opensans-light-webfont.woff" as="style" crossorigin>
-    <link rel="preload" href="/assets/fonts/opensans-bold-webfont.woff2" as="style" crossorigin>
-    <link rel="preload" href="/assets/fonts/opensans-bold-webfont.woff" as="style" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-light-webfont.woff2" as="font" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-light-webfont.woff" as="font" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-bold-webfont.woff2" as="font" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-bold-webfont.woff" as="font" crossorigin>
 
     <meta charset="utf-8">
     <title>Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe</title>
