--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en" itemscope itemtype="http://schema.org/Service">
   <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
 
     <meta charset="utf-8">
     <title>Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe</title>
@@ -27,9 +29,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <script src="../assets/plugins/three.js" defer></script>
-    <script src="../assets/plugins/tween-max-min.js" defer></script>
-    <script src="../assets/plugins/hover.js" defer></script>
+    <script src="/assets/plugins/three.js" defer></script>
+    <script src="/assets/plugins/tween-max-min.js" defer></script>
+    <script src="/assets/plugins/hover.js" defer></script>
 
     <meta name="p:domain_verify" content="0081dd64aa9d5035839b5886bf4fa5fd"/>
 
