--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:site" content="@jupiter_giraffe">
     <meta name="twitter:title" content="Branding and Design for Future-Thinking Tech Companies">
     <meta name="twitter:description" content="Helping future-thinking tech companies and grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
-    <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
+    <meta name="twitter:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
     <!-- Open Graph data -->
