--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,16 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
-
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.eot" as="font" crossorigin>
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.ttf" as="font" crossorigin>
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.woff" as="font" crossorigin>
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.svg" as="font" crossorigin>
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.eot" as="font" crossorigin="">
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.woff2" as="font" crossorigin="">
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.woff" as="font" crossorigin="">
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.ttf" as="font" crossorigin="">
+    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.svg" as="font" crossorigin="">
+    
     <meta charset="utf-8">
     <title>Branding and Design for Future-Thinking Tech Companies</title>
     <meta name="description" content="Branding future-thinking tech companies helping them grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
