--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     
     <meta charset="utf-8">
     <title>Branding and Design for Future-Thinking Tech Companies</title>
-    <meta name="description" content="Branding future-thinking tech companies helping them grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!">
 
     <base href="/">
 
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jupiter_giraffe">
     <meta name="twitter:title" content="Branding and Design for Future-Thinking Tech Companies">
-    <meta name="twitter:description" content="Branding future-thinking tech companies helping them grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="twitter:description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!">
     <meta name="twitter:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
@@ -33,7 +33,7 @@
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
     <meta property="og:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg" />
-    <meta property="og:description" content="Branding future-thinking tech companies helping them grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!" />
+    <meta property="og:description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
