--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/Service">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.eot" as="font" crossorigin>
@@ -16,7 +17,7 @@
     
     <meta charset="utf-8">
     <title>Branding and Design for Future-Thinking Tech Companies</title>
-    <meta name="description" content="Branding future-thinking tech companies helping them grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!">
 
     <base href="/">
 
@@ -24,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jupiter_giraffe">
     <meta name="twitter:title" content="Branding and Design for Future-Thinking Tech Companies">
-    <meta name="twitter:description" content="Branding future-thinking tech companies helping them grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="twitter:description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!">
     <meta name="twitter:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
@@ -33,7 +34,7 @@
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
     <meta property="og:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg" />
-    <meta property="og:description" content="Branding future-thinking tech companies helping them grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!" />
+    <meta property="og:description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
