--- a/src/index.html
+++ b/src/index.html
@@ -16,25 +16,25 @@
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.svg" as="font" crossorigin="">
 
     <meta charset="utf-8">
-    <title>Design and Build SaaS Products for Future-Thinking Tech</title>
-    <meta name="description" content="Design and Development Powerhouse building SaaS products and web apps for tech that changes the world.">
+    <title>Web Apps & SaaS Products - Design, Develop, Launch</title>
+    <meta name="description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind.">
 
     <base href="/">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jupiter_giraffe">
-    <meta name="twitter:title" content="Design and Build SaaS Products for Future-Thinking Tech">
-    <meta name="twitter:description" content="Design and Development Powerhouse building SaaS products and web apps for tech that changes the world.">
+    <meta name="twitter:title" content="Web Apps & SaaS Products - Design, Develop, Launch">
+    <meta name="twitter:description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind.">
     <meta name="twitter:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Design and Build SaaS Products for Future-Thinking Tech" />
+    <meta property="og:title" content="Web Apps & SaaS Products - Design, Develop, Launch" />
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
     <meta property="og:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg" />
-    <meta property="og:description" content="Design and Development Powerhouse building SaaS products and web apps for tech that changes the world." />
+    <meta property="og:description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
