--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,33 @@
 <!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/Service">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
-    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.eot" as="font" crossorigin>
-    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.ttf" as="font" crossorigin>
-    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.woff" as="font" crossorigin>
-    <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.svg" as="font" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-light-webfont.woff2" as="font" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-light-webfont.woff" as="font" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-bold-webfont.woff2" as="font" crossorigin>
+    <link rel="preload" href="/assets/fonts/opensans-bold-webfont.woff" as="font" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
 
     <meta charset="utf-8">
-    <title>Web Apps & SaaS Products - Design, Develop, Launch</title>
-    <meta name="description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind.">
+    <title>Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe</title>
+    <meta name="description" content="Helping future-thinking tech companies and startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
 
     <base href="/">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jupiter_giraffe">
-    <meta name="twitter:title" content="Web Apps & SaaS Products - Design, Develop, Launch">
-    <meta name="twitter:description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind.">
-    <meta name="twitter:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg">
+    <meta name="twitter:title" content="Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe">
+    <meta name="twitter:description" content="Helping future-thinking tech companies and startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Web Apps & SaaS Products - Design, Develop, Launch" />
+    <meta property="og:title" content="Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe" />
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
-    <meta property="og:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg" />
-    <meta property="og:description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind." />
+    <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
+    <meta property="og:description" content="Helping future-thinking tech companies and startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
