--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,14 @@
     <meta name="twitter:site" content="@jupiter_giraffe">
     <meta name="twitter:title" content="Web Apps & SaaS Products - Design, Develop, Launch">
     <meta name="twitter:description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind.">
-    <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
+    <meta name="twitter:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Web Apps & SaaS Products - Design, Develop, Launch" />
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
-    <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
+    <meta property="og:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg" />
     <meta property="og:description" content="We help you design and build your next product innovation. Over 10 years building web apps with business strategy in mind." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
